Feat: add data for number of pages on transaction controller